app/assets/stylesheets/views/_flexible-content.scss
@import "govuk_publishing_components/base";

.flexible-section {
  margin-bottom: govuk-spacing(6);
}

$box-size: 495px;
$gap: 30px;

.impact-header {
  margin-bottom: 30px;
}

.impact-header__caption {
  margin-top: 15px;
  padding-bottom: 15px;

  @include govuk-media-query($from: desktop) {
    margin-left: 50%;
    padding-left: $gap / 2;
  }
}

.impact-header__container {
  display: flex;
  flex-direction: column;
  max-width: ($box-size * 2) + $gap;
  margin: 0 auto;

  @include govuk-media-query($from: desktop) {
    flex-direction: row;
    gap: $gap;
    min-height: $box-size;
  }
}

.impact-header__detail {
  padding: 15px;
  flex-shrink: 1;
  flex-grow: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;

  @include govuk-media-query($from: tablet) {
    padding: 30px;
  }

  @include govuk-media-query($from: desktop) {
    box-sizing: border-box;
    width: 50%;
    max-width: $box-size;
    padding: 30px 0 30px 30px;
  }
}

.impact-header__image-wrapper {
  flex-shrink: 1;
  flex-grow: 0;
  overflow: hidden;
  display: flex;
  align-items: center;
  align-self: flex-end;
  justify-content: center;
  aspect-ratio: 16 / 9;
  box-sizing: border-box;

  @include govuk-media-query($from: desktop) {
    width: 50%;
    aspect-ratio: auto;
    max-width: $box-size;
  }
}

.impact-header__image {
  display: block;
  max-width: 100%;
  margin: 0 auto;

  @include govuk-media-query($from: desktop) {
    max-height: $box-size;
    max-width: none;
  }
}

.impact-header__grid {
  box-sizing: border-box;
  max-width: ($box-size * 2) + $gap;
  margin: 0 auto;
  padding: 15px;
  padding-bottom: 0;

  @include govuk-media-query($from: tablet) {
    padding: 30px;
    padding-bottom: 0;
  }
}

.impact-header--logo {
  .impact-header__image-wrapper {
    aspect-ratio: auto;
    padding: 0 15px;

    @include govuk-media-query($from: tablet) {
      padding-left: 30px;
      padding-right: 30px;
    }
  }

  @include govuk-media-query($from: desktop) {
    .impact-header__container {
      min-height: 0;
    }

    .impact-header__image-wrapper {
      padding: 30px;
      padding-left: 0;
    }

    .impact-header__image {
      max-height: none;
      max-width: 100%;
    }
  }

  &.impact-header--with-background {
    padding-bottom: 15px;

    @include govuk-media-query($from: tablet) {
      padding-bottom: 30px;
    }

    @include govuk-media-query($from: desktop) {
      padding-bottom: 0;
    }
  }
}

.impact-header--with-background {
  .impact-header__grid {
    padding-bottom: 15px;

    @include govuk-media-query($from: tablet) {
      padding-bottom: 30px;
    }
  }
}

.impact-header--plain {
  .impact-header__image {
    @include govuk-media-query($from: desktop) {
      transform: translateX(-$gap);
    }
  }
}

.impact-header--govuk {
  background: #d2e2f1;
}

.impact-header--notable-death {
  background: #0b0c0c;
}

.body-with-image__text {
  margin-bottom: 30px;

  @include govuk-media-query($from: desktop) {
    margin-bottom: 0;
  }
}

.body-with-image__image {
  display: block;
  max-width: 100%;
  margin: 0 auto;
}

